<resources>
    <string name="app_name">Note Gator</string>

    <!-- Navbar -->
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_classes">Classes</string>
    <string name="nav_logout">Logout</string>

    <!-- Add Classes -->
    <string name="hint_add_classes">Class code (e.g. COP3502)</string>

    <!-- Home -->
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- Login -->
    <string name="prompt_facebook">Log in with Facebook</string>
    <string name="prompt_google">Log in with Google</string>
    <string name="prompt_email">Log in with Email</string>
    <string name="prompt_email_signup">Or, register with email</string>

    <string name="description_logo">Note Gator logo</string>
    <string name="description_login_background">Login screen background</string>

    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_homepage">Note Gator</string>
    <string name="title_activity_login">Sign in</string>

    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="title_activity_class">Class Activity</string>

    <!-- Add notes -->
    <string name="prompt_date">When?</string>
    <string name="prompt_description">Add a a brief description</string>
    <string name="button_submit_notes">Submit your notes!</string>

    <string name="title_activity_view_notes">ViewNotes</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


</resources>

